opam-version: "2.0"
maintainer: "unixjunkie@sdf.org"
authors: "Francois Berenger"
homepage: "https://github.com/UnixJunkie/get_line"
bug-reports: "https://github.com/UnixJunkie/get_line/issues"
dev-repo: "git://github.com/UnixJunkie/get_line"
license: "GPL"
build: ["dune" "build" "-p" name "-j" jobs]
depends: [
  "dune" {build}
  "batteries" {>= "2.6.0"}
]
